--- a/main.html
+++ b/main.html
@@ -7,6 +7,28 @@
 </head>
 
 <body>
+	<table>
+		<thead>
+			<tr>
+				<td>Roll number</td>
+				<td>Name</td>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>Sriku</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td>phuk</td>
+			</tr>
+			<tr>
+				<td>3</td>
+				<td>Pra</td>
+			</tr>
+		</tbody>
+	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
